--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -11,6 +11,12 @@
         android:onClick="test1"
         android:text="test1"
         />
+    <Button
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:onClick="test2"
+        android:text="test2"
+        />
     <TextView
         android:id="@+id/mesg"
         android:layout_width="wrap_content"
